////////////////////////////////////////
// CHANGELOG 2.1.0-2.2.0 ///////////////
////////////////////////////////////////

****************************************
* Neue Funktionen / Änderungen *********
****************************************
Grundeinstellungen / WYSIWYG Editor
- In den Grundeinstellungen gibt es neu die Option "Eigenen Style im WYSIWYG Editor verwenden".
Ist diese aktiviert, wird die Datei "style.css" des aktuellen Standard-Template in den WYSIWYG Editor
eingebunden. Somit kann der Style bereits schon während dem editieren geladen und angeschaut werden.
Wird diese Option deaktivert, wird der normale WYSIWYG Editor Style geladen.
- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)

Allgemein
- Neue Platzhalter für Datumsfragmente:
  DATE_YEAR, DATE_MONTH, DATE_DAY, DATE_TIME
- Neu, über den Modul Manager installierte Module, erscheinen nicht in der
  Inhalts Navigation.
- Thumbnail-Erstellung von Transparenten Bildern wird nun unterstützt.
- Das Sprachselektionsmenu hat nun eine "selected" CSS-Klasse gesetzt für die aktive Sprache

File Browser
- Beim Datei-Upload kann zwischen dem normalen Upload oder der Verwendung des
  File Uploader Moduls (sofern vorhanden) ausgewählt werden.

Content Manager
- Der CSS-Name und das "target" für Navigationslinks können nun auch an Unterseiten vererbt werden
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion
- Die Seiten Struktur wird nun für alle Sprachen synchronisiert
- Seiten können per drag&drop strukturiert werden
- Neuer WYSIWYG Editor (siehe CKEDITOR unten)
- Eine Contentseite kann nun auf eine andere Sprache verweisen und deren
  Content verwenden, damit nicht Seiten mit gleichem Inhalt in mehreren
  Sprachen erfasst werden müssen.

Benutzerverwaltung
- Beim Erfassen eines neuen Benutzerkontos kann automatisch eine persönliche